# cpp_cmake_clean_startup

./: CMakeLists.txt
